--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,20 @@ jobs:
 
     - name: docker build
       run: docker build $GITHUB_WORKSPACE
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: List instances
+        uses: ./
+        env:
+          HCLOUD_TOKEN: ${{ secrets.HCLOUD_TOKEN }}
+        with:
+          args: server list
+
+      - name: Check output
+        run: cat "${GITHUB_WORKSPACE}/hcloud.output"
