--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,31 @@ jobs:
 
     - name: docker build
       run: docker build $GITHUB_WORKSPACE
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: List instances
+        uses: ./
+        env:
+          HCLOUD_TOKEN: ${{ secrets.HCLOUD_TOKEN }}
+        with:
+          args: server list
+
+      - name: Cat output
+        run: cat "${GITHUB_WORKSPACE}/hcloud.output"
+
+      - name: Check output
+        run: |
+          for keyword in ID NAME STATUS
+          do
+            grep -q $keyword "${GITHUB_WORKSPACE}/hcloud.output"
+            if [ $? -ne 0 ]; then
+              echo "$keyword not found in output"
+              exit 1
+            fi
+          done
